media/transmission/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: transmission
  namespace: media
  labels:
    app: transmission
spec:
  ports:
  - name: transmission
    port: 80
    targetPort: 9091
  selector:
    app: transmission
